If a case insensitive comparison is done and the strings are equal, a case sensitive comparison must be done as fallback to have a deterministic sorting order. Otherwise it is possible that items "toggle" during hovering.

BUG: 217048
CCBUG: 237621

svn path=/trunk/KDE/kdelibs/; revision=1127780